<resources>
    <string name="app_name">My Resto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Martabak + Terang Bulan</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_promo">Promo</string>
    <string name="menu_quick_order">Quick Order</string>
    <string name="menu_martabak">Martabak</string>
    <string name="menu_terang_bulan">Terang Bulan</string>
    <string name="menu_check_delivery">Check Delivery</string>

    <string name="home_second">Home Second</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">Or</string>
    <string name="connect_using">Connect Using</string>
    <string name="email">E-mail</string>
    <string name="nama">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="log_out">Log Out</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="show_password">Show Password</string>
    <string name="didn_t_have_an_account">Show Password</string>
    <string name="google_logo">Google Logo</string>
    <string name="logo">Logo</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="easy_payment_options">Easy Payment Options</string>
    <string name="easy_payment_options_like_cash_card_and_online_payment">Easy payment options like cash, card and online payment.</string>
    <string name="get_started">Get Started</string>
    <string name="wallet_splash_image">Wallet Splash Image</string>
    <string name="search_delicious_food">Search Delicious Food</string>
    <string name="search_and_order_delicious_food_and_enjoy_with_your_friends_and_family">Search and Order delicious food and enjoy with your friends and family.</string>
    <string name="search_splash_image">Search Splash Image</string>
    <string name="pagination_1">Pagination 1</string>
    <string name="next_button">next button</string>
    <string name="fastest_delivery">Fastest Delivery</string>
    <string name="get_it_fast_with_your_food_lovers_account_order_online_from_top_food_restaurants_in_your_locality">Get it fast with your Food Lovers account. Order online from top Food restaurants in Your locality.</string>
    <string name="delivery_splash_image">Delivery Splash Image</string>
    <string name="pagination_2">Pagination 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello </string>
    <string name="login_preference">My Resto preference</string>
    <string name="login_status_preference">My Resto Status</string>
    <string name="login_username">My Resto Username</string>
    <string name="login_mob">My Resto</string>
    <string name="login_email">My Resto</string>
</resources>
