<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="587dp"
        android:background="@drawable/white_bord"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <TextView
            android:id="@+id/signIn_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="Martabak Cak Wie"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.194" />


        <TextView
            android:id="@+id/signIn_txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="152dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="#999999"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_signup_signup"
            app:layout_constraintVertical_bias="0.111"
            tools:ignore="UnknownId" />

        <EditText
            android:id="@+id/username_editTxt_signup"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="307dp"
            android:layout_height="51dp"
            android:autoSizeMaxTextSize="18sp"
            android:background="@drawable/email_box"
            android:clickable="false"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="#999999"
            android:textColorHint="#E3E3E3"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.309" />

        <EditText
            android:id="@+id/pass_editTxt_signup"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="307dp"
            android:layout_height="51dp"
            android:background="@drawable/email_box"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="#999999"
            android:textColorHint="#E3E3E3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_editTxt_signup"
            app:layout_constraintVertical_bias="0.2" />


        <Button
            android:id="@+id/bt_signin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="142dp"
            android:layout_height="58dp"
            android:layout_gravity="center_vertical"
            android:alpha="1"
            android:background="@drawable/button_style"
            android:enabled="false"
            android:fontFamily="@font/montserrat_semibold"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0sp"
            android:onClick="signIn"
            android:paddingTop="-50dp"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:verticalScrollbarPosition="defaultPosition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass_editTxt_signup"
            app:layout_constraintVertical_bias="0.071"
            tools:ignore="OnClick,RtlCompat" />

        <Button
            android:id="@+id/bt_sign_signup"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="142dp"
            android:layout_height="58dp"
            android:layout_gravity="center_vertical"
            android:alpha="1"
            android:background="@drawable/button_style"
            android:enabled="false"
            android:fontFamily="@font/montserrat_semibold"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0sp"
            android:onClick="Sign UP"
            android:paddingTop="-50dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:verticalScrollbarPosition="defaultPosition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass_editTxt_signup"
            app:layout_constraintVertical_bias="0.57"
            tools:ignore="OnClick,RtlCompat" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592"
        app:srcCompat="@drawable/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>